@@ -38,6 +38,7 @@
   NSTrackingRectTag	toolTipTag;
   NSTimer		*timer;
   NSWindow		*window;
+  NSSize		offset;
   BOOL			restoreMouseMoved;
 }
 
