@@ -1,3 +1,9 @@
+2006-10-04 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/GSToolTips.h: create tool tip wondow fully on screen
+	* Source/GSToolTips.m: ditto
+	* Source/NSView.m: very minor tooltip efficiency tweak.
+
 2006-10-04 Enrico Sersale <enrico@fibernet.ro>
 
 	* Source/NSView.m: In -setToolTip: sets the has_tooltips flag.
